--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.31.1"
   },
   "scripts": {
     "start": "react-scripts start",
